--- a/index.html
+++ b/index.html
@@ -7,51 +7,54 @@
     <title>E-School</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/648494fb52.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container nav-1">
-      <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="images/images/ICON/Logo.png" alt=""></a>
-         <div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Books</a>
+    <div class="nav2">
+      <div class="container nav-1">
+        <nav class="navbar navbar-expand-lg navbar-light ">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="images/images/ICON/Logo.png" alt=""></a>
+           <div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Books</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Course</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Other</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active ">Blog</a>
+                </li>
+                <li>
+                  <button class="sing-in">Sing in</button>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Course</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Other</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active ">Blog</a>
-              </li>
-              <li>
-                <button class="sing-in">Sing in</button>
-            </li>
-            </ul>
+              </ul>
+            </div>
+           </div>
           </div>
-         </div>
-        </div>
-      </nav>
-      <div class="row illustration">
-        <div class="col-md-6">
-          <p class="red">Are you ready to learn?</p>
-          <h1 class="green">
-              Learn with fun on <span class="light-green">any sehedule</span> 
-          </h1>
-          <p class="pra">
-              Lorem ipsum sit amet, consester adipiscing clit.various facilisis netus.
-          </p>
-          <button class="get-start">Get Started</button>
-        </div>
-        <div class="col-md-6">
-          <img src="images/images/Photos/Illustration.png" alt="">
+        </nav>
+        <div class="row illustration">
+          <div class="col-md-6">
+            <p class="red">Are you ready to learn?</p>
+            <h1 class="green">
+                Learn with fun on <span class="light-green">any sehedule</span> 
+            </h1>
+            <p class="pra">
+                Lorem ipsum sit amet, consester adipiscing clit.various facilisis netus.
+            </p>
+            <button class="get-start">Get Started</button>
+          </div>
+          <div class="col-md-6">
+            <img src="images/images/Photos/Illustration.png" alt="">
+          </div>
         </div>
       </div>
     </div>
@@ -149,8 +152,8 @@
                   <button class="get-start">Buy course</button>
                 </div>
                 <div class="card-footer  d-flex justify-content-between">
-                  <small class="text-muted">Start 20 April 2021</small>
-                  <small class="text-muted">60 seats</small>
+                  <small class="text-muted"> <i class="fa-solid fa-calendar"></i> <span>20 April 2021</span></small>
+                  <small class="text-muted"> <i class="fa-solid fa-user-group"></i> <span> 60 seats</span></small>
                 </div>
               </div>
             </div>
@@ -159,10 +162,10 @@
     <div class="container man">
         <h1 class="center">Testimonial</h1>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4 "id="man2">
                 <img src="images/images/Photos/Man.png" alt="">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-8" id="man3">
                 There are many variations of passages of Lorem Ipsum available, but the
                 majority have suffered alteration in some form, by injected humour, 
                 or randomised words which don't look even slightly believable.
@@ -172,11 +175,11 @@
     </div>
    <div class="container black">
        <div class="row">
-           <div class="col-md-3">
+           <div class="col-md-6">
                <p>Millions of people of all ages and from around
                 the world are improving their lives with us</p>
            </div>
-           <div class="col-md-3">
+           <div class="col-md-2">
             <h6>Course</h6>
             <ul class="list-group">
                 <li > Graphic Design </li>
@@ -186,7 +189,7 @@
                 <li >Engineering </li>
               </ul>
            </div>
-           <div class="col-md-3">
+           <div class="col-md-2">
             <h6>Term</h6>
             <ul class="list-group">
                 <li > Graphic Design </li>
@@ -197,7 +200,7 @@
               </ul>
            </div>
           
-           <div class="col-md-3">
+           <div class="col-md-2">
                <h6>Useful Link</h6>
             <ul class="list-group">
                 <li > Graphic Design </li>
